responsive issue in Design module Templates card & user-guides home page cards alignment.

--- a/src/app/email-template/manage-template/manage-template.component.css
+++ b/src/app/email-template/manage-template/manage-template.component.css
@@ -226,3 +226,12 @@ div#htmlContent {
     margin-top:0px!important;
   }
 }
+.serchbarwidth{
+  width: 165px !important;
+}
+@media only screen and (min-width: 992px) and (max-width:1029px) {  
+  .serchbarwidth{
+    width: 145px !important;
+  }
+}
+
